# aws-iot-device-sdk-cpp

./: CMakeLists.txt
include/lang/c/: awsiotsdk_response_code.h  logging.h  mqtt_client.h  network_connection.h  shadow.h
lang/c/: CMakeLists.txt  logging.cpp  mqtt_client.cpp  mqtt_client.hpp  network_connection.cpp  network_connection.hpp  shadow.cpp
samples/lang/c/pub_sub/: CMakeLists.txt  pub_sub.c
samples/lang/c/shadow_delta/: CMakeLists.txt  shadow_delta.c
